# jp-stock-agent

./: .env.example  .gitignore  .~lock.JPStock_Competitive_Analysis_v2.xlsx#  CHANGELOG.md  CLAUDE.md  Dockerfile  JPStock_Agent_Go_To_Market_Strategy.docx  JPStock_Competitive_Analysis.xlsx  JPStock_Competitive_Analysis_v2.xlsx  LICENSE  PUBLISH.md  README.md  docker-compose.auth.yml  docker-compose.yml  mcpize.yaml  pyproject.toml
.github/workflows/: ci.yml
dist2/: jpstock_agent-0.2.0-py3-none-any.whl
src/jpstock_agent/: __init__.py  alert.py  auth.py  backtest.py  candlestick.py  cli.py  config.py  core.py  financial.py  logging.py  market.py  middleware.py  ml.py  options.py  portfolio.py  ratelimit.py  report.py  sentiment.py  server.py  strategy.py  ta.py  usage.py
tests/: conftest.py  test_alert.py  test_auth.py  test_backtest.py  test_candlestick.py  test_cli.py  test_config.py  test_core.py  test_cost_model.py  test_financial.py  test_logging_retry_cache.py  test_market.py  test_middleware.py  test_ml.py  test_options.py  test_parallel_cache.py  test_portfolio.py  test_ratelimit.py  test_report.py  test_sentiment.py  test_server.py  test_strategy.py  test_ta.py  test_usage.py
