[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jpstock-agent"
version = "0.1.0"
description = "MCP server & CLI for Japanese stock market data (TSE/JPX) – powered by yfinance and J-Quants API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Tran" }]
keywords = ["japan", "stock", "mcp", "agent", "jpx", "tse", "yfinance", "jquants"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "yfinance>=0.2.30",
    "jquants-api-client>=2.0.0",
    "vnstock>=3.0.0",
    "fastmcp>=2.0.0",
    "click>=8.0",
    "pydantic-settings>=2.0",
    "pandas>=1.5.0",
    "tabulate>=0.9.0",
    "uvicorn>=0.20.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.1.0"]

[project.scripts]
jpstock-agent = "jpstock_agent.cli:cli"
jpstock-mcp = "jpstock_agent.cli:cli"

[project.urls]
Homepage = "https://github.com/your-username/jpstock-agent"
Repository = "https://github.com/your-username/jpstock-agent"

[tool.hatch.build.targets.wheel]
packages = ["src/jpstock_agent"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
