[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jpstock-agent"
version = "0.2.0"
description = "MCP server & CLI for Japanese and Vietnamese stock market data – 111 AI tools for TSE/JPX/HOSE/HNX powered by yfinance, J-Quants, and vnstock"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Tran", email = "fvn.manhtd@gmail.com" }]
keywords = [
    "japan", "stock", "mcp", "agent", "jpx", "tse", "yfinance", "jquants",
    "vietnam", "vnstock", "technical-analysis", "backtesting", "portfolio",
    "options", "machine-learning", "financial-analysis", "market-data",
    "trading", "ai-tools", "claude", "model-context-protocol",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: FastAPI",
]

dependencies = [
    "yfinance>=0.2.30",
    "jquants-api-client>=2.0.0",
    "vnstock>=3.0.0",
    "fastmcp>=2.0.0",
    "click>=8.0",
    "pydantic-settings>=2.0",
    "pandas>=1.5.0",
    "tabulate>=0.9.0",
    "uvicorn>=0.20.0",
    "ta>=0.11.0",
]

[project.optional-dependencies]
ml = ["scikit-learn>=1.3.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "scikit-learn>=1.3.0",
]

[project.scripts]
jpstock-agent = "jpstock_agent.cli:cli"
jpstock-mcp = "jpstock_agent.cli:cli"

[project.urls]
Homepage = "https://github.com/fvn-manhtd/jp-stock-agent"
Repository = "https://github.com/fvn-manhtd/jp-stock-agent"
Documentation = "https://github.com/fvn-manhtd/jp-stock-agent#readme"
"Bug Tracker" = "https://github.com/fvn-manhtd/jp-stock-agent/issues"
Changelog = "https://github.com/fvn-manhtd/jp-stock-agent/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/jpstock_agent"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
